<resources>
    <string name="app_name">SqliteDataCourse</string>
    <string name="example_text">Sale</string>
    <string name="sample_text">Macbook pro</string>
    <string name="sample_text_price">$50.00</string>
    <string name="sample_text_quantity">Quantity : 10</string>
    <string name="insert_product">Insert Product</string>
    <string name="product_name">Product name</string>
    <string name="price">price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_phone_number">Supplier phone number</string>
    <string name="supplier_name">supplier name</string>
    <string name="editor_insert_product_failed">Product not saved!!</string>
    <string name="editor_insert_product_successful">Product saved!</string>
    <string name="supplier_email">supplier email</string>
    <string name="quantity_text">Quantity: </string>
    <string name="price_new">$</string>
    <string name="i_ts_a_bit_lonely_here">I\'ts a bit lonely here</string>
    <string name="tip">Get started by adding a product</string>
    <string name="text_info">Add product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_insert_product_successful_delete">Item deleted</string>
    <string name="plus">+</string>
    <string name="rest">-</string>

</resources>
