<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_top_container"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin_text_input"
                android:layout_height="@dimen/text_input_height">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_product_editText"
                    android:layout_width="match_parent"
                    android:hint="@string/product_name"
                    android:theme="@style/editText_style"
                    android:layout_height="match_parent"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin_text_input"
                android:layout_height="@dimen/text_input_height">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/price_product_editText"
                    android:layout_width="match_parent"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:theme="@style/editText_style"
                    android:layout_height="match_parent"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/display_quantity"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="0"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/add_button"
                        android:layout_width="70dp"
                        android:text="@string/plus"
                        android:layout_marginRight="15dp"
                        android:layout_height="50dp"/>
                    <Button
                        android:id="@+id/substract_button"
                        android:layout_width="70dp"
                        android:text="@string/rest"
                        android:layout_height="50dp"/>
                </LinearLayout>

            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin_text_input"
                android:layout_height="@dimen/text_input_height">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/supplier_name_product_editText"
                    android:layout_width="match_parent"
                    android:hint="@string/supplier_name"
                    android:theme="@style/editText_style"
                    android:layout_height="match_parent"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_input_height"
                android:layout_margin="@dimen/margin_text_input">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/supplier_email_product_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/supplier_email"
                    android:theme="@style/editText_style"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin_text_input"
                android:layout_height="@dimen/text_input_height">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/supplier_number_product_editText"
                    android:layout_width="match_parent"
                    android:hint="@string/supplier_phone_number"
                    android:inputType="number"
                    android:theme="@style/editText_style"
                    android:layout_height="match_parent"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/order_button"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin_button"
                android:theme="@style/AppTheme.button.submit"
                android:layout_height="50dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
