<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_margin="@dimen/margin_container"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:elevation="20dp"
        android:orientation="vertical"
        android:descendantFocusability="blocksDescendants"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:text="@string/sample_text"
            android:textSize="@dimen/textSizeSection"
            android:textAppearance="@style/textviewStyle"
            android:layout_margin="@dimen/margin_container"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/product_price"
                android:textAppearance="@style/textviewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/sample_text_price"
                android:textSize="@dimen/textSizeTitle"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/marginright"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/product_quantity"
                android:textAppearance="@style/textviewStyle"
                android:text="@string/sample_text_quantity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/textSizeTitle"
                android:fontFamily="sans-serif"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/marginright"
                android:gravity="end"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/sale_button"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_margin="@dimen/margin_button"
                android:theme="@style/AppTheme.button"
                android:layout_height="@dimen/button_height"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>